--- a/dump1090.service
+++ b/dump1090.service
@@ -8,3 +8,6 @@ Restart=always
 RestartSec=10s
 ExecStart=/opt/pocket1090/dump1090 --quiet --metric --json-stats-every 0 --write-json /run/user/1000/
 User=jdn
+
+[Install]
+WantedBy=multi-user.target
